中文>日本語/한국어/English

--- a/map/ze_ffxiv_pharos_sirius/default_ents.jsonc
+++ b/map/ze_ffxiv_pharos_sirius/default_ents.jsonc
@@ -1,4 +1,4 @@
-// stripper by 兎RB,Frame 26.02.12
+// stripper by 兎RB,Frame 26.02.20
 // map ze_ffxiv_pharos_sirius
 // workshop id 3435645851
 // if find mistranslation tell me https://steamcommunity.com/profiles/76561198343767968/
@@ -28,7 +28,7 @@
 						"outputname": "OnSpawn",
 						"targetname": "Server",
 						"inputname": "Command",
-						"overrideparam": "say language translation stripper 26.02.12 by 兎RB,Frame",
+						"overrideparam": "say language translation stripper 26.02.20 by 兎RB,Frame",
 						"delay": 6.0,
 						"timestofire": -1
 					}
@@ -3659,7 +3659,7 @@
   				    "outputname": "OnUser2",
   				    "targetname": "!self",
   				    "inputname": "SetMessage",
-					"overrideparam": "Tatakai inorishi wa utakatai\n戦い祈りしは泡沫",
+					"overrideparam": "Tatakai inorishi wa utakata\n戦い祈りしは泡沫",
   				    "delay": 182.6,
   				    "timestofire": -1
   				},
