中文>日本語/한국어/English

--- a/map/ze_incident_seasons/default_ents.jsonc
+++ b/map/ze_incident_seasons/default_ents.jsonc
@@ -4196,7 +4196,7 @@
 					"outputname": "OnCase03",
 					"targetname": "s4_d6_g_relay0",
 					"inputname": "AddOutPut",
-					"overrideparam": "OnTrigger>command>Command>say *** Winter Summer「Super Express Cooling Train」***>0.0>1",
+					"overrideparam": "OnTrigger>command>Command>say *** Hometown Summer「Super Express Cooling Train」***>0.0>1",
 					"delay": 0.0,
 					"timestofire": -1
 				},
@@ -8947,3 +8947,4 @@
         }
     ]
 }
+
