--- a/map/ze_ffxiv_pharos_sirius/default_ents.jsonc
+++ b/map/ze_ffxiv_pharos_sirius/default_ents.jsonc
@@ -1,8 +1,9 @@
-// stripper by 兎RB,Frame 26.02.20
+// stripper by 兎RB,Frame 26.02.22
 // map ze_ffxiv_pharos_sirius
 // workshop id 3435645851
 // if find mistranslation tell me https://steamcommunity.com/profiles/76561198343767968/
 // serial number 日本語:"1" 한국어:"2" English:"3"
+// + fix bug L39
 {
 	"modify":
 	[
@@ -28,10 +29,52 @@
 						"outputname": "OnSpawn",
 						"targetname": "Server",
 						"inputname": "Command",
-						"overrideparam": "say language translation stripper 26.02.20 by 兎RB,Frame",
+						"overrideparam": "say language translation stripper 26.02.22 by 兎RB,Frame",
 						"delay": 6.0,
 						"timestofire": -1
 					}
+				]
+			}
+		},
+		// fix an issue where the maximum HP does not reach 256
+		{
+            "match":
+            {
+                "targetname": "[PR#]Release_Upgrade_Heal_TR"
+            },
+            "insert":
+            {
+                "io":
+                [
+					{
+                        "outputname": "OnStartTouch",
+						"targetname": "!activator",
+                        "inputname": "KeyValue",
+                        "overrideparam": "max_health 256",
+                        "delay": 0.0,
+                        "timestofire": -1
+                    }
+				]
+			}
+		},
+
+		{
+            "match":
+            {
+                "targetname": "[PR#]Item_Upgrade_Heal"
+            },
+            "insert":
+            {
+                "io":
+                [
+					{
+                        "outputname": "OnTrigger",
+						"targetname": "!activator",
+                        "inputname": "KeyValue",
+                        "overrideparam": "max_health 256",
+                        "delay": 0.0,
+                        "timestofire": 1
+                    }
 				]
 			}
 		}
